# EvanWorkspace

./: README.md
C++/: CMakeLists.txt
C++/Essential C++/GenericProgramming/: CMakeLists.txt  main.cpp  test.md
C++/Tips/extern_c/: CMakeLists.txt  cExample.c  cExample.h  cppExample.cpp  cppExample.hpp  main.c  main.cpp
C++/Tips/logging_with_spdlog/logger/: CMakeLists.txt  Logger.hpp  LoggerAgent.cpp  Main.cpp
C++/Tips/logging_with_spdlog/spdlog/: CMakeLists.txt
C++/boost/tutorial-0-head-less-lib/: CMakeLists.txt
C++/boost/tutorial-1-link-to-boost-lib/: CMakeLists.txt  foo.cpp
C++/class_mem_func_as_callback/: CMakeLists.txt  foo.cpp
C++/logging_with_spdlog/logger/: Logger.hpp  Main.cpp
C++/logging_with_spdlog/spdlog/example/: CMakeLists.txt
C++/macro_with_variables/: test.cpp
Common/zmq/brockerModule/src/: mdbroker.cpp  mdworker.cpp
Common/zmq/loadtest/: CMakeLists.txt
Common/zmq/loadtest/src/: hwclient.cpp
Common/zmq/officialMajordomo/: mdbroker.cpp  mdclient.cpp  requestreplycli.cpp  zmsg.hpp
Common/zmq/router/src/: zmqRouter.cpp
LinuxProgram/multi_thread/eventfd/: eventfd.c
LinuxSocket/sctp_socket/control_stream/: CMakeLists.txt  SctpClientMain.cpp  SctpMessage.hpp  SctpSocketOperation.cpp
LinuxSocket/sctp_socket/io_multiplex/: sctpclnt.c
LinuxSocket/sctp_socket/multi_client_one_server/: sctpnotification.h  sctpsrvr.c
LinuxSocket/sctp_socket/one_client_one_server/: sctpnotification.c  sctpsrvr.c
LinuxSocket/sctp_socket/pass_filedescriptor/: CMakeLists.txt
LinuxSocket/sctp_socket/sctp_proxy/comm/: DomainSocket.cpp  SctpSocketOperation.cpp
LinuxSocket/sctp_socket/sctp_proxy/include/: DomainSocket.hpp  SctpServerEndpoint.hpp  SctpService.cpp  SctpSocketOperation.hpp  common.hpp
LinuxSocket/sctp_socket/sctp_proxy/src/: MsgPollAndDispather.cpp  SctpPort.cpp
LinuxSocket/sctp_socket/terminate_association/: SctpServerEndpoint.hpp
LinuxSocket/sctp_socket/thundering_herd/: loadAndTest.cpp  master.cpp  tester.cpp  tester.hpp
LinuxSocket/sctp_socket/thundering_herd/comm/: DomainSocketClientEndpoint.cpp  SctpNotification.cpp  SctpSocket.cpp
LinuxSocket/sctp_socket/thundering_herd/include/: IoMultiplex.hpp  SctpNotification.hpp  master.hpp  worker.hpp
LinuxSocket/unixDomainSocket/: client.c
LinuxSocket/unixDomainSocket/backup/: connect.cpp  server.cpp
Tools/: monitor.sh
boost/program_options/: CMakeLists.txt  po.cpp
docker/: linux_namespace.sh
multi_process/wait/: wait.c
multi_thread/: CMakeLists.txt  multithread.cpp
multi_thread/eventfd/: CMakeLists.txt
sctp_socket/backup/: sctpclnt.c  sctpsrvr.c
sctp_socket/control_stream/: IoMultiplex.cpp  IoMultiplex.hpp  SctpClientEndpoint.cpp  SctpNotification.hpp  SctpServerEndpoint.cpp  SctpServerMain.cpp
sctp_socket/multi_client_one_server/: CMakeLists.txt  common.h  sctpclnt.c
sctp_socket/pass_filedescriptor/: pass_fd.cpp
sctp_socket/sctp_proxy/: worker.cpp
sctp_socket/sctp_proxy/comm/: CMakeLists.txt  SctpClientEndpoint.cpp  SctpServerEndpoint.cpp
sctp_socket/sctp_proxy/include/: SctpSocket.hpp  logger.hpp
sctp_socket/sctp_proxy/src/: main.cpp
sctp_socket/terminate_association/: CMakeLists.txt  SctpClientEndpoint.cpp  SctpClientEndpoint.hpp  SctpClientMain.cpp  SctpEndpoint.hpp  SctpMessage.hpp  SctpNotification.cpp  SctpNotification.hpp  SctpServerEndpoint.cpp  SctpServerEndpoint.hpp  SctpServerMain.cpp  SctpSocketOperation.cpp  SctpSocketOperation.hpp  common.h  sctpsrvr.c
sctp_socket/thundering_herd/: CMakeLists.txt  Logger.cpp  Logger.hpp  SctpService.cpp  loadAndTest.cpp  main.cpp  master.cpp  test.cpp  tester.cpp  tester.hpp  worker.cpp
sctp_socket/thundering_herd/comm/: CMakeLists.txt  DomainSocket.cpp  DomainSocketClientEndpoint.cpp  DomainSocketServerEndpoint.cpp  IoMultiplex.cpp  SctpClientEndpoint.cpp  SctpClientMain.cpp  SctpNotification.cpp  SctpServerEndpoint.cpp  SctpServerMain.cpp  SctpSocket.cpp  SctpSocketOperation.cpp
sctp_socket/thundering_herd/include/: DomainSocketClientEndpoint.hpp  DomainSocketServerEndpoint.hpp  IoMultiplex.hpp  SctpClientEndpoint.hpp  SctpEndpoint.hpp  SctpMessage.hpp  SctpServerEndpoint.hpp  SctpSocket.hpp  SctpSocketOperation.hpp  common.h  common.hpp  master.hpp  worker.hpp
unixDomainSocket/: CMakeLists.txt  server.c
unixDomainSocket/backup/: accept.cpp  listen.cpp
weixin/: deployWpService.sh
zmq/brockerModule/: CMakeLists.txt
zmq/brockerModule/src/: CMakeLists.txt  mdclient.cpp  zmsg.hpp
zmq/loadtest/: CPU_and_memory_monitor.py
zmq/loadtest/src/: CMakeLists.txt  hwserver.cpp
zmq/officialMajordomo/: CMakeLists.txt  requestreplyser.cpp
zmq/router/src/: CMakeLists.txt
